--- a/StagingEngine/stagingEngine.yaml
+++ b/StagingEngine/stagingEngine.yaml
@@ -1,4 +1,4 @@
-﻿AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
 Description: Creates the Staging Engine component of the Data Lake.
 Resources:
