parameterize source IP

--- a/Visualisation/elasticsearch/elasticsearch.yaml
+++ b/Visualisation/elasticsearch/elasticsearch.yaml
@@ -77,9 +77,7 @@ Resources:
           Condition:
             IpAddress:
               aws:SourceIp:
-              - "54.240.193.0/24"
-              - "203.9.185.243/32"
-              - "13.237.104.186"
+              - !Ref IpAddress
       AdvancedOptions:
         rest.action.multi.allow_explicit_index: !Ref AllowExplicitIndex
   ElasticsearchCloudWatchDashboard:
