--- a/DataLakeStructure/dataLakeStructure.yaml
+++ b/DataLakeStructure/dataLakeStructure.yaml
@@ -113,7 +113,6 @@ Resources:
             Resource:
               Fn::GetAtt: [ S3Staging, Arn ]
             Principal: "*"
-"
 
   S3Raw:
     Type: 'AWS::S3::Bucket'
@@ -146,44 +145,32 @@ Resources:
               - '/'
     DependsOn: S3Logs
 
-  S3RawBucketPolicy:
-    Type: AWS::S3::BucketPolicy
-    Properties: 
-      Bucket:
-        !Join
-          - ''
-          - - !Ref EnvironmentPrefix
-            - !Ref S3RawName
-      PolicyDocument: 
-        Statement: 
-          - 
-            Effect: "Allow"
-            Principal: 
-              AWS: !Ref S3RawExternalRoleARN
-            Action: 
-              - "s3:PutObject"
-            Resource: 
-              - Fn::Join:
-                - ''
-                -
-                  - Fn::GetAtt: [ S3Raw, Arn ]
-                  - '/*'              
-            Condition: 
-              StringEquals: 
-                "s3:x-amz-acl": "bucket-owner-full-control"  
-          - 
-            Effect: "Allow"
-            Principal: 
-              AWS: !Ref S3RawExternalRoleARN
-            Action: 
-              - "s3:GetObject"
-            Resource: 
-              - Fn::Join:
-                - ''
-                -
-                  - Fn::GetAtt: [ S3Raw, Arn ]
-                  - '/*'              
-    DependsOn: S3Raw
+  # S3RawBucketPolicy:
+  #   Type: AWS::S3::BucketPolicy
+  #   Properties: 
+  #     Bucket:
+  #       !Join
+  #         - ''
+  #         - - !Ref EnvironmentPrefix
+  #           - !Ref S3RawName
+  #     PolicyDocument: 
+  #       Statement: 
+  #         - 
+  #           Effect: "Allow"
+  #           Principal: 
+  #             AWS: !Ref S3RawExternalRoleARN
+  #           Action: 
+  #             - "s3:PutObject"
+  #           Resource: 
+  #             - Fn::Join:
+  #               - ''
+  #               -
+  #                 - Fn::GetAtt: [ S3Raw, Arn ]
+  #                 - '/*'              
+  #           Condition: 
+  #             StringEquals: 
+  #               "s3:x-amz-acl": "bucket-owner-full-control"  
+  #   DependsOn: S3Raw
 
   S3Curated:
     Type: 'AWS::S3::Bucket'
