--- a/Visualisation/elasticsearch/elasticsearch.yaml
+++ b/Visualisation/elasticsearch/elasticsearch.yaml
@@ -40,11 +40,10 @@ Parameters:
     Type: String
     Default: true # This is set to true as dataCatalog lambda requires it
     AllowedValues: [true, false]
-  IpAddress:
+  IpAddresses:
     Description: The IP address / CIDR range allowed access to kibana url
-    Type: String
-    MinLength: 1
-Conditions: 
+    Type: List<String>
+Conditions:
   HasDedicatedMasterNodes: !Equals [!Ref DedicatedMasterEnabled, true]    
 Resources:
   DataLakeElasticsearchDomain:
@@ -76,10 +75,10 @@ Resources:
           - es:*
           Condition:
             IpAddress:
-              aws:SourceIp:
-              - "54.240.193.0/24"
-              - "203.9.185.243/32"
-              - "13.237.104.186"
+              aws:SourceIp: !Ref IpAddresses
+#              - "54.240.193.0/24"
+#              - "203.9.185.243/32"
+#              - "13.237.104.186"
       AdvancedOptions:
         rest.action.multi.allow_explicit_index: !Ref AllowExplicitIndex
   ElasticsearchCloudWatchDashboard:
